Fixes OpenApi
